syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/bookpresence/add_to_library.proto";
import "com/example/internalapi/input/reqreply/bookpresence/borrow_from_library.proto";
import "com/example/internalapi/input/reqreply/bookpresence/get_all_by_library_id.proto";
import "com/example/internalapi/input/reqreply/bookpresence/get_all_by_library_id_and_book_id.proto";
import "com/example/internalapi/input/reqreply/bookpresence/remove_from_library.proto";
import "com/example/internalapi/input/reqreply/bookpresence/return_to_library.proto";

service BookPresenceService {
  rpc addToLibrary(com.example.internalapi.request.book_presence.add_to_library.proto.AddBookToLibraryRequest)
      returns (com.example.internalapi.request.book_presence.add_to_library.proto.AddBookToLibraryResponse);

  rpc borrowFromLibrary(com.example.internalapi.request.book_presence.borrow_from_library.proto.BorrowBookFromLibraryRequest)
      returns (com.example.internalapi.request.book_presence.borrow_from_library.proto.BorrowBookFromLibraryResponse);

  rpc getAllByLibraryId(com.example.internalapi.request.book_presence.get_all_by_library_id.proto.GetAllBooksByLibraryIdRequest)
      returns (com.example.internalapi.request.book_presence.get_all_by_library_id.proto.GetAllBooksByLibraryIdResponse);

  rpc getAllByLibraryIdAndBookId(com.example.internalapi.request.book_presence.get_all_by_library_id_and_book_id.proto.GetAllBooksByLibraryIdAndBookIdRequest)
      returns (com.example.internalapi.request.book_presence.get_all_by_library_id_and_book_id.proto.GetAllBooksByLibraryIdAndBookIdResponse);

  rpc removeFromLibrary(com.example.internalapi.request.book_presence.remove_from_library.proto.RemoveBookFromLibraryRequest)
      returns (com.example.internalapi.request.book_presence.remove_from_library.proto.RemoveBookFromLibraryResponse);

  rpc returnToLibrary(com.example.internalapi.request.book_presence.return_to_library.proto.ReturnBookToLibraryRequest)
      returns (com.example.internalapi.request.book_presence.return_to_library.proto.ReturnBookToLibraryResponse);
}
